fixed margin spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 /* Basic */
 
 	body {
+		overflow-x: hidden;
 		background: #fff;
 	}
 
